--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,8 @@ edition = "2018"
 
 [dependencies]
 wasm-bindgen = "0.2"
+imageproc = "0.18.0"
+image = "0.21.1"
 
 [lib]
 crate-type = ["cdylib", "rlib"]
