--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,8 @@ edition = "2018"
 wasm-bindgen = "0.2"
 imageproc = "0.18.0"
 image = "0.21.1"
+nalgebra = "0.18.0"
+# cv = { git = "https://github.com/nebgnahz/cv-rs.git" }
 
 [lib]
 crate-type = ["cdylib", "rlib"]
