--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,9 @@ edition = "2018"
 [dependencies]
 wasm-bindgen = "0.2"
 imageproc = "0.18.0"
-image = "0.21.1"
+image = "0.21.2"
 nalgebra = "0.18.0"
+time = "0.1.42"
 # cv = { git = "https://github.com/nebgnahz/cv-rs.git" }
 
 [lib]
