--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,12 +5,29 @@ authors = ["vladislav"]
 edition = "2018"
 
 [dependencies]
-wasm-bindgen = "0.2"
+wasm-bindgen = "0.2.47"
+js-sys = "0.3.24"
 imageproc = "0.18.0"
 image = "0.21.2"
 nalgebra = "0.18.0"
 time = "0.1.42"
+console_error_panic_hook = "0.1.6"
 # cv = { git = "https://github.com/nebgnahz/cv-rs.git" }
+
+[dependencies.web-sys]
+version = "0.3.24"
+features = [
+  'Document',
+  'Element',
+  'HtmlCanvasElement',
+  'CanvasRenderingContext2d',
+  'WebGlBuffer',
+  'WebGlRenderingContext',
+  'WebGlProgram',
+  'WebGlShader',
+  'Window',
+  'console',
+]
 
 [lib]
 crate-type = ["cdylib", "rlib"]
